--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ button {
   align-items: center;
   margin: 0 3rem;
   
-  background: #FFFFFF;
+  background: #FFF;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
   border-radius: .6rem;
   padding: 4.8rem 6.4rem 6.4rem;
@@ -109,6 +109,7 @@ button {
   border-radius: 4px 0px 0px 4px;
   text-align: center;
   width: 4.3rem;
+  outline-width: 0;
 }
 
 #guess-box button{
