--- a/style.css
+++ b/style.css
@@ -33,6 +33,8 @@ body {
 
 main {
   margin-top: -15rem;
+  align-items: center;
+  text-align: center;
 }
 
 h1 {
@@ -115,4 +117,11 @@ button {
 #guess-box button{
   border-radius: 0px 4px 4px 0px;
 
+}
+
+#error-message {
+  opacity: 0;
+  font-size: 1.8rem;
+  transition: opacity 500ms;
+  color: darkred;
 }
